deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollingupdate-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - "app1.kubernetesonline.xyz"
    secretName: nginx-tls
  rules:
  - host: app1.kubernetesonline.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: deploy01
              port: 
                number: 80
